new function: create Photo, get PhotoByID